SonarQute - 2 issues